# IteraDynamics

./: .env  .gitignore  README.md  analyze_trades.py  audit_quick.py  build_base.py  calendar_equity_sim.py  cleanup_duplicates.py  create_dummy_models.py  dashboard.py  debug_coinbase.py  deep_migrate.py  download_btc_history.py  download_coinbase_history.py  find_money.py  fix_adapter.py  fix_init.py  fix_live.py  fix_live_syntax.py  fix_signal.py  fix_smart_simulation.py  inspect_wallet.py  migrate_to_core.py  monte_carlo_equity.py  monte_carlo_trades.py  offline_backtest.py  offline_walkforward.py  position_sizing_experiments.py  pyproject.toml  reconstruct_history.py  restore_regime.py  run_live.py  test_guardrails.py  test_moonwire.py  train_real_models.py  vault.py  verify_reality.py
alpha_engine/: .env.example  .env.test  .gitignore  CLAUDE_CODE_CHANGES.md  LICENSE.TXT  PHILOSOPHY.md  README.md  devplan.md  devplan_phase3.md  main.py  requirements-dev.txt  requirements.txt  run_all_tests.sh  tasklist.md
apex_core/: EXTRACTION_PROGRESS.md  GITHUB_SETUP.md  INTEGRATION_ADAPTERS.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  README.md  README_MIGRATION.md  USAGE_EXAMPLES.md  WHATS_LEFT.md  adjust_signals_based_on_feedback.py  adjustment_trigger_router.py  backfill_reddit_api.py  backtest.py  bluegreen_promotion.py  burst_detection.py  burst_detection_router.py  common.py  composite_router.py  conftest.py  consensus_router.py  dashboard.py  (+99 more)
(+556 files in other folders)
